tests/integration/snapshots/main__integration__err__error_unknown_argument.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: --c0ncurrency
   ╭─[ <cli>:1:1 ]
   │
 1 │ --c0ncurrency
   │ ──────┬──────  
   │       ╰──────── unknown flag: --c0ncurrency
───╯
